--- a/crates/oc_world_server/Cargo.toml
+++ b/crates/oc_world_server/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2024"
 oc_root = { path = "../oc_root" }
 oc_utils = { path = "../oc_utils" }
 oc_world = { path = "../oc_world" }
+oc_network = { path = "../oc_network" }
 oc_individual = { path = "../oc_individual" }
 derive_more = { workspace = true, features = ["constructor"] }
 thiserror.workspace = true
 rayon.workspace = true
 rustc-hash.workspace = true
+rkyv.workspace = true
