--- a/crates/oc_individual/Cargo.toml
+++ b/crates/oc_individual/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2024"
 oc_root = { path = "../oc_root" }
 oc_utils = { path = "../oc_utils" }
 derive_more = { workspace = true, features = ["constructor"] }
+rkyv.workspace = true
