--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ rayon = "1.11"
 rustc-hash = "2.1"
 rkyv = "0.8"
 num_cpus = "1.17"
+message-io = "0.19"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+clap = { version = "4.5", features = ["derive"] }
