--- a/crates/oc_battle_gui/Cargo.toml
+++ b/crates/oc_battle_gui/Cargo.toml
@@ -3,20 +3,26 @@ name = "oc_battle_gui"
 version = "0.1.0"
 edition = "2024"
 
+# [profile.dev]
+# opt-level = 1
+
+# [profile.dev.package."*"]
+# opt-level = 3
+
+# [profile.release]
+# codegen-units = 1
+# lto = "thin"
+
+# [profile.wasm-release]
+# inherits = "release"
+# opt-level = "s"
+# strip = "debuginfo"
+
 [dependencies]
-bevy.workspace = true
-
-[profile.dev]
-opt-level = 1
-
-[profile.dev.package."*"]
-opt-level = 3
-
-[profile.release]
-codegen-units = 1
-lto = "thin"
-
-[profile.wasm-release]
-inherits = "release"
-opt-level = "s"
-strip = "debuginfo"
+oc_network = { path = "../oc_network" }
+# bevy.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+clap.workspace = true
+message-io.workspace = true
+rkyv.workspace = true
