--- a/crates/oc_world_server/Cargo.toml
+++ b/crates/oc_world_server/Cargo.toml
@@ -15,3 +15,7 @@ rayon.workspace = true
 rustc-hash.workspace = true
 rkyv.workspace = true
 num_cpus.workspace = true
+message-io.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+clap.workspace = true
