--- a/crates/oc_geo/Cargo.toml
+++ b/crates/oc_geo/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "oc_individual"
+name = "oc_geo"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,6 +8,8 @@ edition = "2024"
 [dependencies]
 oc_root = { path = "../oc_root" }
 oc_utils = { path = "../oc_utils" }
-oc_geo = { path = "../oc_geo" }
 derive_more = { workspace = true, features = ["constructor"] }
 rkyv.workspace = true
+
+[dev-dependencies]
+rstest.workspace = true
