--- a/crates/oc_world/Cargo.toml
+++ b/crates/oc_world/Cargo.toml
@@ -8,5 +8,11 @@ edition = "2024"
 [dependencies]
 oc_root = { path = "../oc_root" }
 oc_utils = { path = "../oc_utils" }
+oc_geo = { path = "../oc_geo" }
 oc_individual = { path = "../oc_individual" }
+
 derive_more = { workspace = true, features = ["constructor"] }
+rkyv.workspace = true
+
+[dev-dependencies]
+rstest.workspace = true
