--- a/crates/oc_world_server/Cargo.toml
+++ b/crates/oc_world_server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 oc_root = { path = "../oc_root" }
 oc_utils = { path = "../oc_utils" }
+oc_geo = { path = "../oc_geo" }
 oc_world = { path = "../oc_world" }
 oc_network = { path = "../oc_network" }
 oc_individual = { path = "../oc_individual" }
@@ -19,3 +20,6 @@ message-io.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 clap.workspace = true
+
+[dev-dependencies]
+rstest.workspace = true
