--- a/crates/oc_world/Cargo.toml
+++ b/crates/oc_world/Cargo.toml
@@ -10,6 +10,7 @@ oc_root = { path = "../oc_root" }
 oc_utils = { path = "../oc_utils" }
 oc_geo = { path = "../oc_geo" }
 oc_individual = { path = "../oc_individual" }
+oc_physics = { path = "../oc_physics" }
 
 derive_more = { workspace = true, features = ["constructor"] }
 rkyv.workspace = true
