--- a/crates/oc_world_server/Cargo.toml
+++ b/crates/oc_world_server/Cargo.toml
@@ -10,6 +10,8 @@ oc_geo = { path = "../oc_geo" }
 oc_world = { path = "../oc_world" }
 oc_network = { path = "../oc_network" }
 oc_individual = { path = "../oc_individual" }
+oc_physics = { path = "../oc_physics" }
+
 derive_more = { workspace = true, features = ["constructor"] }
 thiserror.workspace = true
 rayon.workspace = true
