--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ message-io = "0.19"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 clap = { version = "4.5", features = ["derive"] }
+bresenham = "0.1.1"
 
 # tests
 rstest = "0.26"
