--- a/crates/oc_physics/Cargo.toml
+++ b/crates/oc_physics/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-name = "oc_individual"
+name = "oc_physics"
 version = "0.1.0"
 edition = "2024"
 
-[features]
-
 [dependencies]
-oc_root = { path = "../oc_root" }
 oc_utils = { path = "../oc_utils" }
-oc_geo = { path = "../oc_geo" }
-oc_physics = { path = "../oc_physics" }
+oc_root = { path = "../oc_root" }
+
 derive_more = { workspace = true, features = ["constructor"] }
 rkyv.workspace = true
+bresenham.workspace = true
