--- a/crates/oc_battle_gui/Cargo.toml
+++ b/crates/oc_battle_gui/Cargo.toml
@@ -22,7 +22,7 @@ edition = "2024"
 oc_network = { path = "../oc_network" }
 oc_utils = { path = "../oc_utils" }
 oc_geo = { path = "../oc_geo" }
-# bevy.workspace = true
+bevy.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 clap.workspace = true
