--- a/crates/oc_physics/Cargo.toml
+++ b/crates/oc_physics/Cargo.toml
@@ -10,3 +10,4 @@ oc_root = { path = "../oc_root" }
 derive_more = { workspace = true, features = ["constructor"] }
 rkyv.workspace = true
 bresenham.workspace = true
+tracing.workspace = true
