--- a/crates/oc_battle_gui/Cargo.toml
+++ b/crates/oc_battle_gui/Cargo.toml
@@ -22,9 +22,11 @@ edition = "2024"
 oc_network = { path = "../oc_network" }
 oc_utils = { path = "../oc_utils" }
 oc_geo = { path = "../oc_geo" }
+oc_individual = { path = "../oc_individual" }
 bevy.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 clap.workspace = true
 message-io.workspace = true
 rkyv.workspace = true
+rustc-hash.workspace = true
