--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = ["crates/*"]
 
 [workspace.dependencies]
-bevy = "0.18"
+bevy = { version = "0.18", features = ["bevy_dev_tools"] }
 derive_more = "2.1"
 thiserror = "2.0"
 rayon = "1.11"
