feat: debug as feature

--- a/crates/oc_battle_gui/Cargo.toml
+++ b/crates/oc_battle_gui/Cargo.toml
@@ -3,6 +3,9 @@ name = "oc_battle_gui"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+debug = ["bevy/bevy_dev_tools"]
+
 # [profile.dev]
 # opt-level = 1
 
