--- a/crates/oc_battle_gui/Cargo.toml
+++ b/crates/oc_battle_gui/Cargo.toml
@@ -22,6 +22,7 @@ debug = ["bevy/bevy_dev_tools"]
 # strip = "debuginfo"
 
 [dependencies]
+oc_root = { path = "../oc_root" }
 oc_network = { path = "../oc_network" }
 oc_utils = { path = "../oc_utils" }
 oc_geo = { path = "../oc_geo" }
