--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = ["crates/*"]
 bevy = "0.18"
 derive_more = "2.1"
 thiserror = "2.0"
+anyhow = "1.0"
 rayon = "1.11"
 rustc-hash = "2.1"
 rkyv = "0.8"
