--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 clap = { version = "4.5", features = ["derive"] }
 bresenham = "0.1.1"
+image = "0.25"
+uuid = { version = "1.21", features = ["v4"] }
 
 # tests
 rstest = "0.26"
