feat: static server for background files

--- a/crates/oc_geo/Cargo.toml
+++ b/crates/oc_geo/Cargo.toml
@@ -10,6 +10,7 @@ oc_root = { path = "../oc_root" }
 oc_utils = { path = "../oc_utils" }
 derive_more = { workspace = true, features = ["constructor"] }
 rkyv.workspace = true
+serde.workspace = true
 
 [dev-dependencies]
 rstest.workspace = true
