--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,13 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 clap = { version = "4.5", features = ["derive"] }
 bresenham = "0.1.1"
 image = "0.25"
-uuid = { version = "1.21", features = ["v4"] }
+uuid = { version = "1.21", features = ["v4", "serde"] }
 toml = "1.0"
 serde = "1.0"
+serde_json = "1.0"
+axum = "0.8"
+tokio = "1.49"
+tokio-util = "0.7"
 
 # tests
 rstest = "0.26"
