feat: gui download regions backgrouns

--- a/crates/oc_battle_gui/Cargo.toml
+++ b/crates/oc_battle_gui/Cargo.toml
@@ -26,6 +26,7 @@ oc_root = { path = "../oc_root" }
 oc_network = { path = "../oc_network" }
 oc_utils = { path = "../oc_utils" }
 oc_geo = { path = "../oc_geo" }
+oc_world = { path = "../oc_world" }
 oc_physics = { path = "../oc_physics" }
 oc_individual = { path = "../oc_individual" }
 bevy.workspace = true
@@ -35,3 +36,4 @@ clap.workspace = true
 message-io.workspace = true
 rkyv.workspace = true
 rustc-hash.workspace = true
+reqwest = { workspace = true, features = ["blocking"] }
